Booted the proxy for the first time, and it's able to send the status